2023-06-05 Jan Kotanski <jan.kotanski@desy.de>
	* fix setting zmq datasource in auto the datasource mode (#727)
	* tagged as 2.83.4

2023-06-05 Jan Kotanski <jan.kotanski@desy.de>
	* increate a number of digits after comma in max/min itensity display levels to 5 (#721)
	* tagged as 2.83.3

2023-06-05 Jan Kotanski <jan.kotanski@desy.de>
	* change minimul difference between nim and max itensity display levels to 0 (#719)
	* tagged as 2.83.2

2023-05-30 Jan Kotanski <jan.kotanski@desy.de>
	* move ZMQ colon conf. separator checkbox to the source specific tab (#716)
	* tagged as 2.83.1

2023-05-23 Jan Kotanski <jan.kotanski@desy.de>
	* add option for ZMQ configuration separator (#713)
	* tagged as 2.83.0

2023-05-19 Jan Garrevoet <jan.garrevoet@desy.de>
	* Breaking change in the ZMQ config layout. topic and HWM are not
	separated with a slahs but with a colon to allow for topics to contain
	slashes.

2023-03-31 Jan Kotanski <jan.kotanski@desy.de>
	* enlarge GLOBALREFRESHTIME when it is too small
	* change GLOBALREFRESHRATE  to GLOBALREFRESHTIME
	* add auto enlarge refresh time configuration variable
	* tagged as 2.82.0

2023-01-25 Jan Kotanski <jan.kotanski@desy.de>
	* use warnings instead of numpy.warnings
	* tagged as 2.81.1

2023-01-10 Jan Kotanski <jan.kotanski@desy.de>
	* add default and signal attributes to Raw NeXus exporter (#689)
	* fix for crashing exportg dialog in pyqtgraph (>= 0.12.0) (#687)
	* tagged as 2.81.0

2023-01-02 Jan Kotanski <jan.kotanski@desy.de>
	* fix for crashing config dialog in python 3.10
	* remove overflowColorCheckBox from the configuration
	* tagged as 2.80.1

2022-12-20 Jan Kotanski <jan.kotanski@desy.de>
	* add overflow value widget
	* set the hidra log level from the lavue log level
	* hide non-used actions from plot menus
	* tagged as 2.80.0

2022-12-20 Jan Kotanski <jan.kotanski@desy.de>
	* add settings for the high value mask color
	* tagged as 2.79.0

2022-11-17 Jan Kotanski <jan.kotanski@desy.de>