@@ -1317,9 +1317,12 @@ class LiveViewer(QtWidgets.QDialog):
             serverdict = HIDRASERVERLIST
         else:
             serverdict = {"pool": []}
-        print("LV SOURCE")
+        if self.__settings.autozmqtopics:
+            zmqtopics = self.__settings.zmqtopics or None
+        else:
+            zmqtopics = self.__settings.zmqtopics
         self.__sourcewg.updateMetaData(
-            zmqtopics=(self.__settings.zmqtopics or None),
+            zmqtopics=zmqtopics,
             zmqcolon=self.__settings.zmqcolon,
             dirtrans=self.__settings.dirtrans,
             tangoattrs=self.__settings.tangoattrs,
@@ -3409,7 +3412,6 @@ class LiveViewer(QtWidgets.QDialog):
                     if wgdata:
                         self.__imagewg.updateMetaData(**wgdata)
                     if resdata:
-                        print("LV DATA")
                         self.__sourcewg.updateMetaData(**resdata)
                     if self.__settings.geometryfromsource:
                         self.__settings.updateMetaData(**self.__mdata)
