@@ -1,5 +1,6 @@
-2023-06-05 Jan Kotanski <jan.kotanski@desy.de>
+2023-06-09 Jan Kotanski <jan.kotanski@desy.de>
 	* fix setting zmq datasource in auto the datasource mode (#727)
+	* do not overwrite zmqtopics in the autozmqtopics mode (#728)
 	* tagged as 2.83.4
 
 2023-06-05 Jan Kotanski <jan.kotanski@desy.de>
